[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/menu/Click.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/menu/Focus.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/ui/Button/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui/fonts/button_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/ui/fonts/title_font.tres" type="DynamicFont" id=6]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 6 )
text = "Dungeon Dash"
align = 1
valign = 1
uppercase = true

[node name="TitleEffect" type="Label" parent="Title"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
margin_left = -176.0
margin_top = -19.0
margin_right = 180.0
margin_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 6 )
text = "Dungeon Dash"
align = 1
valign = 1
uppercase = true

[node name="StartButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
margin_left = -85.0
margin_top = -20.5
margin_right = 85.0
margin_bottom = 20.5

[node name="Label" type="Label" parent="StartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -14.0
margin_right = 27.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 5 )
text = "Start"

[node name="OptionsButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -20.5
margin_right = 85.0
margin_bottom = 20.5

[node name="Label" type="Label" parent="OptionsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.5
margin_top = -16.0
margin_right = 43.5
margin_bottom = 16.0
custom_fonts/font = ExtResource( 5 )
text = "Options"

[node name="QuitButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
margin_left = -85.0
margin_top = -20.5
margin_right = 85.0
margin_bottom = 20.5

[node name="Label" type="Label" parent="QuitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -15.0
margin_right = 25.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 5 )
text = "Quit"

[node name="FocusAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SoundEffects"

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SoundEffects"

[node name="QuitTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="focus_exited" from="StartButton" to="." method="_on_Button_focus_exited"]
[connection signal="mouse_entered" from="StartButton" to="." method="_on_mouse_entered" binds= [ 1 ]]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="focus_exited" from="OptionsButton" to="." method="_on_Button_focus_exited"]
[connection signal="mouse_entered" from="OptionsButton" to="." method="_on_mouse_entered" binds= [ 2 ]]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="focus_exited" from="QuitButton" to="." method="_on_Button_focus_exited"]
[connection signal="mouse_entered" from="QuitButton" to="." method="_on_mouse_entered" binds= [ 3 ]]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="QuitTimer" to="." method="_on_QuitTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
